se le agregó botón reset

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <input id="btnSubmit" class="btnSubmit" type="submit" value="Calcular IMC">
          </form>
 
+         <button id="btnReset" class="btnReset">Reset</button>
       <!--    <div class="resultado" id="resultado">
          <p>Este es el resultado</p> 
          </div> -->
